# TonkaReconstruction

./: .gitignore  CMakeLists.txt  README.md
.claude/: ralph-loop.local.md
patch/: build.sh  launch.bat  wing32.c  wing32.def
src/: main.cpp
src/data/: GameState.h  ModuleData.h
src/engine/: Application.cpp  Application.h  AssetManager.cpp  AssetManager.h  AudioManager.cpp  AudioManager.h  InputManager.cpp  InputManager.h  Renderer.cpp  Renderer.h  SceneManager.cpp  SceneManager.h  TextRenderer.cpp  TextRenderer.h
src/game/: ActivityScene.cpp  ActivityScene.h  CityMapScene.cpp  CityMapScene.h  GarageScene.cpp  GarageScene.h  MainMapScene.cpp  MainMapScene.h  QuarryScene.cpp  QuarryScene.h  SignInScene.cpp  SignInScene.h  TimeCardScene.cpp  TimeCardScene.h
src/objects/: GameObject.cpp  GameObject.h  Vehicle.cpp  Vehicle.h
tools/: bin_parser.py  dat_extractor.py  decompiled_raw.txt  export_module_data.py
tools/ghidra_project/TonkaProject.rep/: project.prp
tools/ghidra_project/TonkaProject.rep/idata/00/: 00000000.prp
tools/ghidra_scripts/: DecompileRLE.java
